refactor : 비어있는 컬렉션은 Collections를, 원소가 한개인 컬렉션은 List, Set의 of를 사용 (#54)